--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   web_socket_channel: ^2.1.0
-  photo_view: ^0.11.1
-  save_in_gallery: ^0.1.3
+#  zoom_widget: ^0.2.1
   flutter_speed_dial: ^1.2.4
-  intl: ^0.16.0
+  intl: ^0.17.0
   fluttertoast: ^3.1.3
 
 dev_dependencies:
