--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  web_socket_channel: ^2.1.0
+  web_socket_channel: ^2.1.0 # Web socket connection
+  image_gallery_saver: ^1.6.9 # Screenshot capturing
+  fluttertoast: ^8.0.7 # Photo saving
+  path_provider: ^2.0.2 # Video saving
+  dio: ^4.0.0 # Video saving
 #  zoom_widget: ^0.2.1
   flutter_speed_dial: ^1.2.4
   intl: ^0.17.0
-  fluttertoast: ^3.1.3
+
 
 dev_dependencies:
   flutter_test:
